--- a/static/css/main.css
+++ b/static/css/main.css
@@ -505,13 +505,15 @@ a:hover>span.site-name{
     line-height: 80px;
 }
 .cd-intro {
-    float: left;
-    margin-left: 6%;
+    /*margin: 0 auto;*/
+    text-align: center;
+    /*float: left;*/
+    /*margin-left: 6%;*/
 }
 .cd-headline {
     font-size: 30px;
     margin-top: 40px;
-    color: #000;
+    color: #fff;
     font-weight: 100;
     letter-spacing: 3pt;
 }
@@ -1455,7 +1457,7 @@ ul.sub-menu li a {
     width: 100%;
 }
 .history-wrapper article {
-    margin-top: 60px
+    margin-top: -15px
 }
 .history-wrapper h4 {
     font-family: 'Ubuntu';
@@ -1482,7 +1484,7 @@ ul.sub-menu li a {
 .newsletter-left {
     height: 325px;
     width: 100%;
-    background-color: #7beec7;
+    background-color: #6195FF;
     display: table;
     text-align: center;
 }
@@ -1503,7 +1505,7 @@ ul.sub-menu li a {
     position: relative;
     height: 325px;
     width: 100%;
-    background-color: #7beec7;
+    background-color: #6195FF;
     display: table;
     text-align: center;
 }
@@ -1526,13 +1528,13 @@ ul.sub-menu li a {
     padding-right: 20px;
 }
 .newsletter-right-inner input:focus {
-    border: 1px solid #7beec7;
+    border: 1px solid #6195FF;
 }
 .newsletter-right-inner input[type=submit] {
     margin-top: 15px;
     max-width: 175px;
     margin: auto;
-    background: #7beec7;
+    background: #6195FF;
     border: 0;
     margin-top: 30px;
     color: #fff;
@@ -1576,7 +1578,7 @@ ul.sub-menu li a {
     text-align: center;
 }
 .tabs-wrapper {
-    background-color: #7beec7;
+    background-color: #6195FF;
     min-height: 330px;
     width: 100%;
     padding: 40px;
@@ -1636,7 +1638,7 @@ ul.sub-menu li a {
     width: 100%;
 }
 .our-story-content {
-    background-color: #7beec7;
+    background-color: #6195FF;
     margin-top: 50px;
     height: 400px;
     display: table;
@@ -1788,7 +1790,7 @@ ul.client-thumb-2 li a img:hover{
     -o-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
     backface-visibility: hidden;
-    background: #86eecb;
+    background: #333333;
     cursor: pointer;
     border: none;
     width: 48px;
@@ -1819,7 +1821,7 @@ ul.client-thumb-2 li a img:hover{
     right: 0;
     margin: auto;
     height: 2px;
-    background-color: #545454;
+    background-color: #ffffff;
     transition: all 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
@@ -1925,7 +1927,7 @@ ul.client-thumb-2 li a img:hover{
     transition-duration: 200ms
 }
 .works-filter a.active {
-    color: #7beec7;
+    color: #6195FF;
 }
 .works-filter a:before {
     padding-right: 20px;
@@ -1992,7 +1994,7 @@ ul.client-thumb-2 li a img:hover{
     z-index: 4;
 }
 .img .overlay-thumb:hover {
-    background-color: rgba(123, 238, 199, .9);
+    background-color: rgba(97, 149, 255, 0.76);
 }
 
 .img .overlay-thumb.bg-white:hover{
