--- a/views/index.html
+++ b/views/index.html
@@ -56,7 +56,14 @@
     <style>
         @font-face {
             font-family: Panxiang;
-            src: url('../static/font/panxiang.ttf');
+            src: url('../static/font/Panxiang.eot');
+            src:
+                    url('../static/font/Panxiang.eot?#font-spider') format('embedded-opentype'),
+                    url('../static/font/Panxiang.woff2') format('woff2'),
+                    url('../static/font/Panxiang.woff') format('woff'),
+                    url('../static/font/Panxiang.svg') format('svg');
+            font-weight: normal;
+            font-style: normal;
         }
         *{
             font-family: Panxiang;
@@ -65,7 +72,7 @@
 </head>
 
 <body>
-<!--主题色值:深蓝#133458;浅蓝#6195FF;-->
+<!--主题色值:深蓝#133458;浅蓝#6195FF;腾祥沁圆简-->
 
     <!-- Preloader -->
     <div class="cover"></div>
